# streamlit-dateinput-intl

./: .gitignore  DevelopmentGuide.md  MANIFEST.in  README.md  example.py  pyproject.toml
.github/workflows/: python-publish.yml
streamlit_dateinput_intl/: __init__.py  pyproject.toml
streamlit_dateinput_intl/frontend/: README.md  package-lock.json  package.json  vite.config.ts
streamlit_dateinput_intl/frontend/src/: DateInput.css  DateInput.tsx  index.tsx  useIntlLocale.tsx
