[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-dateinput-intl"
version = "0.0.1"
description = "DateInput internationalization"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "thaild", email = "thaild@rikkeisoft.com" }]
dependencies = ["streamlit >= 1.51"]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["streamlit_dateinput_intl*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
streamlit_dateinput_intl = ["frontend/build/**/*", "pyproject.toml"]

[[tool.streamlit.components]]
name = "streamlit-dateinput-intl.streamlit_dateinput_intl"
asset_dir = "streamlit_dateinput_intl/frontend/build"
