[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-dateinput-intl"
version = "0.0.2"
description = "DateInput internationalization"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "thaild", email = "thaild@rikkeisoft.com" }]

[project.optional-dependencies]
devel = [
  "wheel",
  "streamlit>=1.51.0",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["streamlit_dateinput_intl*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
streamlit_dateinput_intl = ["frontend/build/**/*", "pyproject.toml"]
